// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Color snapshots > should render Color at full alpha 1`] = `
<DocumentFragment>
  <div
    class="_Color_a21594"
  >
    <div
      class="_Color__picker_a21594"
      style="background-color: rgb(255, 0, 0);"
    />
    <div
      class="_Color__picker-alpha_a21594"
      style="background-color: rgb(255, 0, 0);"
    />
    <div
      class="_Color__picker-texture_a21594"
    />
  </div>
</DocumentFragment>
`;

exports[`Color snapshots > should render Color at partial alpha 1`] = `
<DocumentFragment>
  <div
    class="_Color_a21594"
  >
    <div
      class="_Color__picker_a21594"
      style="background-color: rgb(0, 0, 255);"
    />
    <div
      class="_Color__picker-alpha_a21594"
      style="background-color: rgba(0, 0, 255, 0.5);"
    />
    <div
      class="_Color__picker-texture_a21594"
    />
  </div>
</DocumentFragment>
`;
